# dbt-rowlineage

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml
dbt_rowlineage/: __init__.py  auto.py  cli.py  compiler_patch.py  config.py  plugin.py  runtime_patch.py  sql_instrumentation.py  tracer.py
dbt_rowlineage/utils/: sql.py  uuid.py
dbt_rowlineage/writers/: __init__.py  jsonl_writer.py  parquet_writer.py  table_writer.py
demo/: .user.yml  README.md  dbt_project.yml  docker-compose.yml  packages.yml  profiles.yml  run_demo.sh
demo/code-server/: Dockerfile
demo/docker/: Dockerfile
demo/macros/: ordered_array_agg.sql
demo/models/: example_source.csv  mart_model.sql
demo/models/analytics/: top_level.sql
demo/models/marts/: cities_rollup.sql  count_rollup.sql  region_rollup.sql  region_rollup2.sql
demo/models/staging/: staging_cities.sql  staging_model.sql
demo/scripts/: generate_lineage.py
demo/seeds/: cities.csv  example_source.csv
demo/sqlmesh/: Dockerfile  sqlmesh.yaml
demo/ui/: Dockerfile  app.py  requirements.txt
demo/ui/static/: index.html
tests/: run_instrumentation.py  test_auto.py  test_cli.py  test_compiler_patch.py  test_demo_assets.py  test_demo_ui_integration.py  test_lineage_ui.py  test_manifest_index.py  test_metadata.py  test_ordered_array_agg_macro.py  test_plugin.py  test_runtime_patch.py  test_sql_instrumentation.py  test_tokens_lineage.py  test_tracer.py
tests/integration/: test_region_rollup_macro_integration.py
