[project]
name = "dbt-rowlineage"
dynamic = ["version"]
description = "Adapter-agnostic dbt plugin providing row-level lineage tracing"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "OpenAI", email = "dev@example.com" }]
license = { file = "LICENSE" }
keywords = ["dbt", "lineage", "analytics", "data-engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.10"
dependencies = [
    "dbt-core>=1.7",
    "pandas>=1.5",
    "pyarrow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/openai/dbt-rowlineage"
Repository = "https://github.com/openai/dbt-rowlineage"
Issues = "https://github.com/openai/dbt-rowlineage/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.entry-points."dbt.adapters"]
rowlineage = "dbt_rowlineage.plugin:RowLineagePlugin"

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["dbt_rowlineage*"]
exclude = ["demo*", "tests*"]

[tool.setuptools.dynamic]
version = { attr = "dbt_rowlineage.__version__" }
